<resources>
    <string name="app_name">CyberElectronics</string>
    <string name="TOPSELLERS"/>
    <string name="hyper_x_cloud_stinger">HYPER X CLOUD STINGER</string>
    <string name="headphones_and_headsets">Headphones and headsets</string>
    <string name="_24795tg">24795tg</string>
    <string name="topsellers">TOPSELLERS</string>
    <string name="CATEGORIES" />
    <string name="categories1">CATEGORIES</string>
    <string name="view_all">View All</string>
    <string name="cyberelectronics">CYBERELECTRONICS</string>
    <string name="power_units">Power Units</string>
    <string name="lamps">Lamps</string>
    <string name="keyboards">Keyboards</string>
    <string name="stands">Stands</string>
    <string name="humidifiers">Humidifiers</string>
    <string name="mouses">Mouses</string>
    <string name="watches">Watches</string>
    <string name="rgb_collection">RGB Collection</string>
    <string name="hyper_x_12345">Hyper X 12345</string>
    <string name="power_units1">POWER UNITS</string>
    <string name="characteristics">CHARACTERISTICS</string>
    <string name="categories12">CATEGORIES</string>
    <string name="power_units2">Power Units</string>
    <string name="lamps2">Lamps</string>
    <string name="stands2">Stands</string>
    <string name="keyboards2">Keyboards</string>
    <string name="humidifiers2">Humidifiers</string>
    <string name="watches2">Watches</string>
    <string name="monitors">Monitors</string>
    <string name="laptops">Laptops</string>
    <string name="mouses2">Mouses</string>
    <string name="rgb_collection2">RGB Collection</string>
    <string name="headphones_and_headsets2">Headphones And Headsets</string>
    <string name="table">Table</string>
    <string name="wires">Wires</string>
    <string name="microphones">Microphones</string>
    <string name="chairs">Chairs</string>
    <string name="game_consoles">Game Consoles</string>
    <string name="tables">Tables</string>
    <string name="tvs">TVs</string>
    <string name="drones">Drones</string>
    <string name="mats">Mats</string>
    <string name="loudspeakers">Loudspeakers</string>
    <string name="charges">Charges</string>
    <string name="type">Type</string>
    <string name="type1">Type:</string>
    <string name="screen">Screen</string>
    <string name="without_oc">Without OC</string>
    <string name="oc">OC:</string>
    <string name="laptop_for_gaming">Laptop for gaming</string>
    <string name="screen_diagonal">Screen diagonal:</string>
    <string name="_15_6_inch">15.6 Inch</string>
    <string name="fps">FPS:</string>
    <string name="_165_hz">165 Hz</string>
    <string name="screen_size">Screen size:</string>
    <string name="_1920x1080">1920x1080</string>
    <string name="_300_0_kd_m2">300.0 kd/m2</string>
    <string name="brightness">Brightness:</string>
    <string name="coverage">Coverage:</string>
    <string name="matte">Matte</string>
    <string name="ips">IPS</string>
    <string name="matrix_type">Matrix type:</string>
    <string name="processor">Processor</string>
    <string name="cpu">CPU:</string>
    <string name="intel_core_i7_11800h">Intel Core I7 11800H</string>
    <string name="max_frequency">Max frequency:</string>
    <string name="_4600_0_mhz">4600.0 MHz</string>
    <string name="base_frequency">Base frequency:</string>
    <string name="_2300_0_mhz">2300.0 MHz</string>
    <string name="cache_size">Cache Size:</string>
    <string name="_24_mb">24 Mb</string>
    <string name="memory">Memory</string>
    <string name="_16_0_gb">16.0 Gb</string>
    <string name="type_of_memory">Type of memory:</string>
    <string name="ddr4">DDR4</string>
    <string name="frequency_of_memory">Frequency of memory:</string>
    <string name="_3200_0_mhz">3200.0 MHz</string>
    <string name="max_size_of_memory">Max size of memory:</string>
    <string name="cyber">CYBER</string>
    <string name="electronics">ELECTRONICS</string>
    <string name="electronic">ELECTRONICS</string>
    <string name="welcome">WELCOME</string>
    <string name="back">BACK</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="register">REGISTER</string>
    <string name="create_your_new_account">CREATE YOUR NEW ACCOUNT</string>
    <string name="register1">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="login1">Login</string>
    <string name="back_button">Back button</string>
    <string name="search_button">search_button</string>
    <string name="image_button">image_button</string>
    <string name="button">button</string>
    <string name="_680_000_t">680 000 T</string>
    <string name="lenovo_2023_legion_5">LENOVO 2023 LEGION 5</string>
    <string name="_111111">#111111</string>
    <string name="_5_0">5.0</string>
    <string name="color">Color</string>
    <string name="characteristic3">Characteristic</string>
    <string name="oc1">OC</string>
    <string name="cpu1">CPU</string>
    <string name="fps1">FPS</string>
    <string name="screen_size1">Screen size</string>
    <string name="screen_diagonal1">Screen diagonal</string>
    <string name="buy_now">Buy Now</string>
    <string name="bin">BIN</string>
    <string name="_709990_tg">709990 TG</string>
    <string name="laptop">Laptop</string>
    <string name="_1">1</string>
    <string name="pay">Pay</string>
    <string name="joysticks">Joysticks</string>
    <string name="accessories">Accessories</string>
    <string name="tablets">Tablets</string>
    <string name="no">NO</string>
    <string name="yes_pay">YES, PAY</string>
    <string name="are_you_sure_you_want_to_pay">Are You Sure You Want To Pay?</string>
    <string name="completed">Completed</string>
    <string name="back1">Back</string>
    <string name="password1">PASSWORD</string>
    <string name="recovery">RECOVERY</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="Login">Login</string>
    <string name="order_11111111">ORDER №11111111</string>
    <string name="payment_check">Payment Check</string>
    <string name="check_number">№ Check number</string>
    <string name="_11111111">11111111</string>
    <string name="date_of_payment">Date of payment</string>
    <string name="_01_01_2023_13_00_00">01.01.2023 13:00:00</string>
    <string name="customer_name">Customer name</string>
    <string name="sailau_sh">Sailau Sh.</string>
    <string name="support_number">Support number</string>
    <string name="_7_777_7777777">+7(777)7777777</string>
    <string name="way_of_payment">Way of payment</string>
    <string name="adress">Adress</string>
    <string name="almaty_c_68_abay_av">Almaty c. 68 Abay av.</string>
    <string name="total">Total</string>
    <string name="_704_795_tg">704 795 tg.</string>
    <string name="repeat_order">Repeat order</string>
    <string name="refund_of_purchase">Refund of purchase</string>
    <string name="feedback">Feedback</string>
    <string name="refund">REFUND</string>
    <string name="reason_for_return">REASON FOR RETURN</string>
    <string name="login_prpfile">login</string>
    <string name="nikita">Nikita</string>
    <string name="name_profile">name</string>
    <string name="nikitin">Nikitin</string>
    <string name="surname">surname</string>
    <string name="nikita23_mail_ru">Nikita23@mail.ru</string>
    <string name="email_profile">email</string>
    <string name="password_profile">******************</string>
    <string name="password_profile1">password</string>
    <string name="_1234">****1234</string>
    <string name="payment_method">payment method</string>
    <string name="phone_num">+7(777)7777777</string>
    <string name="phone_number">phone number</string>
    <string name="address">address</string>
    <string name="order_status">Order status</string>
    <string name="back_payed">Back</string>
    <string name="payment">PAYMENT</string>
    <string name="nikita_n">nikita_n</string>
    <string name="exit_button">exit_button</string>
    <string name="history_button">history_button</string>
    <string name="order_history">ORDER HISTORY</string>
    <string name="_01_01_2023">01.01.2023</string>
    <string name="_13_00">13:00</string>
    <string name="type_here">Type here...</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="home_number">Home Number</string>
    <string name="comments">Comments</string>
    <string name="feddback_lenovo">Lenovo 2023 Legion 5</string>
    <string name="assess_product">Assess product</string>
    <string name="benefits">Benefits</string>
    <string name="drawbacks">Drawbacks</string>
    <string name="sent">Sent</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="cyber_electronics_product">Cyber Electronics Product</string>
    <string name="payment_cart">Payment Cart</string>
    <string name="your_order_has_been_paid">Your order has been paid</string>
    <string name="order_details">Order details</string>
    <string name="your_order_will_be_delivered">Your order will be delivered</string>
    <string name="today_from_15_00_to_18_00">today from 15:00 to 18:00.</string>
    <string name="_13_02">13:02</string>
    <string name="your_order_is_completed">Your order is completed</string>
    <string name="_16_00">16:00</string>
    <string name="card">Card</string>
    <string name="card_number">Card number</string>
    <string name="_1234_1234">1234 **** **** 1234</string>
    <string name="nikitin_nikita">NIKITIN NIKITA</string>
    <string name="card_expiry_date">Card Expiry Date</string>
    <string name="cv_code">CV code</string>
    <string name="cash">Cash</string>
    <string name="add_address">+ Add Address</string>
    <string name="add_in_bin">Add in bin</string>
    <string name="operation_memory">Operation memory:</string>
    <string name="search">Search</string>

</resources>