<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegray"
    tools:context=".presentation.mvvm.AddressAddFragment">

    <LinearLayout
        android:id="@+id/feedbackHead"
        android:layout_width="380dp"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/addressBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/backarrow"
            android:contentDescription="@string/back_button"
            app:layout_constraintTop_toTopOf="@id/feedbackHead" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-3dp"
            android:fontFamily="@font/montserrat_semibold"
            android:gravity="center"
            android:text="@string/payment_methods"
            android:textAllCaps="true"
            android:textColor="@color/purple"
            android:textSize="23sp"
            app:layout_constraintTop_toTopOf="@id/feedbackHead" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_text"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackHead">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/city"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/address_arround"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/type_here"
            android:letterSpacing="0.05"
            android:paddingStart="15dp"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/street"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/address_arround"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/type_here"
            android:letterSpacing="0.05"
            android:paddingStart="15dp"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/home_number"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/address_arround"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/type_here"
            android:letterSpacing="0.05"
            android:paddingStart="15dp"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/comments"
            android:textColor="@color/purple"
            android:textSize="20sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <EditText
            android:layout_width="380dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/address_comment"
            android:fontFamily="@font/montserrat_medium"
            android:hint="@string/type_here"
            android:letterSpacing="0.05"
            android:paddingStart="15dp"
            android:textColor="@color/purple"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="@id/address_text" />

        <Button
            android:id="@+id/addressBtn"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="Continue"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/address_text" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>